--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
     padding: 0;
 }
 .note {
-    background-color: #fef68a;
+    background-color: #ffd700;
     border-radius: 10px;
     padding: 1rem;
     min-height: 170px;
