--- a/src/index.css
+++ b/src/index.css
@@ -1,91 +1,52 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-
-* {
-    font-family: 'Poppins', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Titan+One&display=swap');
+.App {
+  width: 100vw;
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
 body {
-    margin: 0;
-    padding: 0;
+  padding: 0;
+  margin: 0;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: rgb(90, 128, 241);
+  font-family: 'Titan One', cursive;
 }
-.note {
-    background-color: #ffd700;
-    border-radius: 10px;
-    padding: 1rem;
-    min-height: 170px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    white-space: pre-wrap;
-    
-}
-.note-footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.notes-list {
-    display: grid;
-    grid-gap:1rem;
-    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
-}
-.containar {
-    max-width:960px;
-    min-height: 100vh;
-    margin-right: auto;
-    margin-left: auto;
-    padding-right: 15px;
-    padding-left: 15px;
-}
-span {
-    font-size: 16px;
-}
-.note.new {
-    background-color: #67d7cc;
-}
-textarea {
-    border: none;
-    resize: none;
-    background-color: #67d7cc;
-}
-textarea:focus {
-    outline: none;
-}
-.save {
-    background-color: #e1e1e1;
-    border: none;
-    border-radius: 15px;
-    padding: 5px 10px;
-    cursor: pointer;
-}
-.save:hover {
-    background-color: #ededed;
-}
-.delete--btn {
-    cursor: pointer;
-}
-.search {
-    display:flex;
-    align-items:center;
-    background-color: rgb(233,233,233);
-    border-radius: 10px;
-    padding: 5px;
-    margin-bottom: 1.5em;
-}
-.search input {
-    width: 100%;
-    border: none;
-    background-color: rgb(233,233,233);
-    outline: none;
-}
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.dark-mode {
-    background-color: black;
 
+.board {
+  width: 500px;
+  height: 500px;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
 }
-.dark-mode h1 {
-    color: white;
+
+.row {
+  flex: 33.33%;
+  display: flex;
+  flex-direction: row;
+}
+
+.square {
+  flex: 33.33%;
+  height: 100%;
+  border: 1px solid rgb(255, 255, 255);
+  cursor: pointer;
+  display: grid;
+  place-items: center;
+  font-size: 40px;
+  color: purple;
+  font-family: Arial, Helvetica, sans-serif;
+  transition: .1s ease-in-out;
+  font-family: 'Titan One', cursive;
+}
+.square:active {
+  background-color: #ffffff;
+}
+
+h1 {
+  text-align: center;
+  font-size: 40px;
 }
